1. Implement checks for null values and empty parameters. 2. Revise the tests.